--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,13 +12,28 @@ body {
 	z-index: -1;
 }
 
-.plane-container {
-	position: absolute;
-	top:0; 
-	bottom:0; 
-	width:100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 1;
-}
+// .plane-container {
+// 	position: absolute;
+// 	margin-top: 35px;
+// 	top:0; 
+// 	bottom:0; 
+// 	width:100%;
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+// 	z-index: 1;
+	
+// }
+
+
+// #quizContainer{
+// 	width: 100%;
+// 	height: 150px;
+// 	background:white;
+// 	// border: 1px solid black;
+// 	margin:auto;
+// 	margin-top: 200px;
+// 	opacity: 0.8;
+// }
+
+
