--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 /* CSS Entry Point */
 body { 
-	margin:0; padding:0;
+	margin:0; 
+	padding:0;
 	// position: relative;
 }
 
@@ -9,7 +10,7 @@ body {
 	top:0; 
 	bottom:0; 
 	width:100%; 
-	z-index: -1;
+	// z-index: -1;
 }
 
 // .plane-container {
