--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,40 +1,34 @@
 /* CSS Entry Point */
-body { 
-	margin:0; 
-	padding:0;
-	// position: relative;
-}
+.app { 
 
-#map { 
-	position:absolute; 
-	top:0; 
-	bottom:0; 
-	width:100%; 
-	// z-index: -1;
-}
-
-// .plane-container {
-// 	position: absolute;
-// 	margin-top: 35px;
-// 	top:0; 
-// 	bottom:0; 
-// 	width:100%;
-// 	display: flex;
-// 	justify-content: center;
-// 	align-items: center;
-// 	z-index: 1;
 	
-// }
+}
 
+.map { 
+	// margin:none; 
+	margin-top: 30px;
+	width:100%; 
+	text-align:center;
+	position: relative;
+	
+}
 
-// #quizContainer{
-// 	width: 100%;
-// 	height: 150px;
-// 	background:white;
-// 	// border: 1px solid black;
-// 	margin:auto;
-// 	margin-top: 200px;
-// 	opacity: 0.8;
-// }
+.SF{
+	// position: absolute;
+}
 
+.paris{
+	// position: absolute;
+}
+
+.question-box-wrapper{
+	height: 200px;
+	width: 200px;
+	border: 1px solid red;
+	position: absolute;
+}
+
+.img-wrapper {
+	position: absolute;
+}
 
